[build-system]
requires = ["setuptools>=80.0,<90.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Steam-Stats"
version = "1.3.2"
authors = [{ name = "Nicco", email = "github.giving328@passmail.com" }]
description = "A python project to get the stats of your Steam account and display them in your GitHub profile."
requires-python = ">= 3.8"
readme = "README.md"
license = "GPL-3.0"
license-files = ["LICENSE"]
dependencies = [
    "bs4==0.0.2",
    "DateTime==5.5",
    "playwright==1.53.0",
    "PyGithub==2.6.1",
    "python-semantic-release==10.1.0",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: System :: Monitoring",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/Nicconike/Steam-Stats"
Changelog = "https://github.com/Nicconike/Steam-Stats/blob/master/CHANGELOG.md"
Documentation = "https://github.com/Nicconike/Steam-Stats/blob/master/README.md"
Wiki = "https://github.com/Nicconike/Steam-Stats/wiki"
Issues = "https://github.com/Nicconike/Steam-Stats/issues"

[project.optional-dependencies]
test = [
    "pytest-asyncio==1.0.0",
    "pytest-cov==6.2.1",
    "pytest-mock==3.14.1",
    "requests-mock==1.12.1",
]
dev = ["bandit==1.8.5", "pipdeptree==2.26.1", "pylint==3.3.7", "twine==6.1.0"]

[tool.setuptools.packages.find]
where = ["api"]

[tool.semantic_release]
version_variables = ["api/main.py:__version__"]
version_toml = ["pyproject.toml:project.version"]
version_source = "tag"
branch = "master"
commit_message = "chore(release): Version Release v{version}"
tag_format = "v{version}"
logging_use_named_masks = true
commit_parser = "conventional"
commit_parser_options = { parse_squash_commits = true, ignore_merge_commits = true }

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.changelog]
default_templates.changelog_file = "CHANGELOG.md"
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?: .+''',
    '''ci(?:\([^)]*?\))?: .+''',
    '''refactor(?:\([^)]*?\))?: .+''',
    '''style(?:\([^)]*?\))?: .+''',
    '''test(?:\([^)]*?\))?: .+''',
    '''build\((?!deps\): .+)''',
    '''Merged? .*''',
    '''Initial Commit.*''',
]
mode = "update"
insertion_flag = "<!-- CHANGELOG -->"
template_dir = "templates"
release_notes_template = "release_notes.md.j2"

[tool.semantic_release.changelog.environment]
trim_blocks = true
autoescape = false
ignore_token_for_push = false

[tool.semantic_release.publish]
upload_to_vcs_release = true
upload_to_pypi = true
